# astra.os

./: .gitignore  ARCHITECTURE_OVERVIEW.md  CLEANUP_SUMMARY.md  Cargo.toml  Config.in  Dockerfile  MOZJS_ANALYSIS.md  Makefile  NEXT_STEPS.md  PHASE1_STATUS.md  QUICK_START_STD_BACKEND.md  README.md  SERVO_BUILD_ANALYSIS.md  SERVO_INTEGRATION_NEXT_STEPS.md  SERVO_INTEGRATION_PLAN.md  SERVO_INTEGRATION_ROADMAP.md  SERVO_STUB_CHECKLIST.md  STD_BACKEND_DESIGN.md  STD_INTEGRATION_SUCCESS.md  USERSPACE_SUCCESS.md  docker-compose.yml  external.desc  external.mk  initramfs.tar  servo_deps_visual.txt
configs/: astra_defconfig  linux.config
docs/: SERVO_ANALYSIS.md  std-backend-architecture.txt
html5ever-local/src/: lib.rs
initramfs/: index.html  style.css
kernel/: Cargo.toml  x86_64-browser_os.json
kernel/.cargo/: config.toml
kernel/src/: gdt.rs  keyboard.rs  main.rs  process.rs  serial.rs  simple_html.rs  syscall.rs  userspace_code.rs
kernel/src/css/: mod.rs  parser.rs  selector.rs
kernel/src/drivers/: font.rs  framebuffer.rs  mod.rs  mouse.rs  vesa.rs
kernel/src/fs/: mod.rs  tar.rs  vfs.rs
kernel/src/html/: mod.rs  renderer.rs
kernel/src/interrupts/: mod.rs
kernel/src/layout/: box_model.rs  layout_tree.rs  mod.rs
kernel/src/memory/: allocator.rs  mod.rs
kernel/src/network/: device.rs  http.rs  mod.rs  url.rs
kernel/src/resource/: mod.rs
kernel/src/syscall/: mod.rs
kernel/src/ui/: button.rs
markup5ever-local/: lib.rs
overlay/etc/init.d/: S99wayland
overlay/etc/profile.d/: wayland.sh
rust-std-fork/: Cargo.toml
rust-target-spec/: x86_64_astra_os.rs
rust-target-spec/sys_astra_os/: alloc.rs  env.rs  io.rs  mod.rs  process.rs  stdio.rs  thread.rs  time.rs
scripts/: build.sh  docker-build.sh  run-qemu.sh
tendril-local/src/: lib.rs
tools/: run-qemu.sh
userspace/browser/: Cargo.toml
userspace/browser/src/: lib.rs
web_atoms-local/: lib.rs
