[workspace]
resolver = "2"
members = [
    "kernel",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Browser OS Team"]
rust-version = "1.71.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-repo/astra.os"

[workspace.dependencies]
# Servo dependencies (local path dependencies)
html5ever = { path = "html5ever-local" }
markup5ever = { path = "markup5ever-local" }
tendril = { path = "tendril-local" }
web_atoms = { path = "web_atoms-local" }

# Servo external dependencies
log = "0.4"
new_debug_unreachable = "1.0.2"
phf = "0.13"
phf_codegen = "0.13"
string_cache = { version = "0.9.0", default-features = false }
string_cache_codegen = "0.6.1"
utf-8 = "0.7"
encoding = "0.2"
encoding_rs = "0.8.12"

# Dev dependencies for Servo crates
criterion = "0.8"
typed-arena = "2.0.2"
rand = "0.9"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3

[patch.crates-io]
libc = { path = "libc-fork" }
precomputed-hash = { path = "precomputed-hash-fork" }
