[package]
name = "kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
x86_64 = "0.15"
spin = "0.9"
uart_16550 = "0.3"
pic8259 = "0.11"
pc-keyboard = "0.7"
linked_list_allocator = "0.10.5"
conquer-once = { version = "0.4", default-features = false }
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
volatile = "0.2"
smoltcp = { version = "0.11", default-features = false, features = ["alloc", "proto-ipv4", "socket-tcp", "socket-udp", "medium-ethernet"] }
embedded-graphics = { version = "0.8", default-features = false }

# Servo core libraries (temporarily disabled for initial std integration)
# html5ever = "0.27"
# markup5ever = "0.12"
# markup5ever_rcdom = "0.3"
# tendril = "0.4"
# string_cache = "0.8"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
